# entity-tracking-externalization

./: .gitignore  COMMANDS.md  FINDINGS.md  README.md  frontier.py  pyproject.toml  run.py  sweep.py  twobytwo.py
ete/: __init__.py  backends.py  experiment.py  grading.py  prompts.py  tasks.py
ete/agent/: README.md  __init__.py  core.py  domain.py  domains.py  smoke.py
tests/: test_agent.py  test_core.py
