[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "entity-tracking-externalization"
version = "0.1.0"
description = "Probe: does externalizing entity-state tracking into CoT route around the fragile REMOVE failure, or preserve it?"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "angrysky56", email = "angrysky56@github.com" },
]
dependencies = [
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ete"]
